--- a/src/Components/PopUp.css
+++ b/src/Components/PopUp.css
@@ -10,7 +10,7 @@
 .PopUp {
     z-index: 10;
     display: block;
-    width: 50vw;
+    width: 70vw;
 
     min-height: 55vh;
     position: fixed;
@@ -54,7 +54,7 @@
     margin-left: auto;
     margin-right: auto;
     height: 80%;
-    width: 52%;
+    width: 60%;
 }
 
 .FormStuff {
@@ -89,8 +89,8 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: 15px;
+    margin-bottom: 15px;
     width: 100%;
     height: 40px;
     font-size: 11px;
@@ -160,7 +160,7 @@
         margin-left: auto;
         margin-right: auto;
         height: 80%;
-        width: 52%;
+        width: 60%;
     }
 
     .FormStuff {
@@ -191,7 +191,7 @@
         display: block;
         margin-left: auto;
         margin-right: auto;
-        margin-top: 45px;
+        margin-top: 35px;
         width: 60%;
         height: 30px;
         font-size: 15px;
@@ -226,7 +226,7 @@
     .PopUp {
         z-index: 10;
         display: block;
-        width: 50vw;
+        width: 60vw;
     
         min-height: 55vh;
         position: fixed;
@@ -270,7 +270,7 @@
         margin-left: auto;
         margin-right: auto;
         height: 80%;
-        width: 52%;
+        width: 60%;
     }
     
     .FormStuff {
